Changed root path to return the estimate PDF.

--- a/templates/estimation/new.twig
+++ b/templates/estimation/new.twig
@@ -2,6 +2,6 @@
 
 {% block content %}
     <div id="app" class="container">
-        <estimate pdf-route="{{ ESTIMATES_PLUGIN_DIR_PUBLIC }}"></estimate>
+        <estimate pdf-route="{{ ROOT_PUBLIC_PLUGIN_URL }}"></estimate>
     </div>
 {% endblock %}
