--- a/templates/base.twig
+++ b/templates/base.twig
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Jarocho Landscaping, Inc.</title>
+    <title>{{ CUSTOMER_NAME }}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="shortcut icon" href="images/favicon.ico">
     <link href="{{ ESTIMATES_PLUGIN_BUILD_PUBLIC }}/css/app.css" rel="stylesheet">
@@ -12,7 +12,7 @@
     <nav class="navbar navbar-inverse">
         <div class="container">
             <div class="navbar-header">
-                <a class="navbar-brand" href="#">Jarocho Landscaping, Inc.</a>
+                <a class="navbar-brand" href="#">{{ CUSTOMER_NAME }}</a>
             </div>
         </div>
     </nav>
