--- a/templates/estimation/pdf.twig
+++ b/templates/estimation/pdf.twig
@@ -46,7 +46,14 @@
         <table width="100%">
             <tbody>
                 <tr>
-                    <td width="100%">
+                    <td width="50%">
+                        <img src="{{ CUSTOMER_LOGO }}" style="width: 150px">
+                        <br />
+                        <strong>{{ CUSTOMER_NAME }}</strong><br>
+                        Email: <strong>{{ CUSTOMER_EMAIL }}</strong><br>
+                        Phone: <strong>{{ CUSTOMER_PHONE }}</strong><br>
+                    </td>
+                    <td width="50%">
                         <h2>{{ estimation.formType|upper}}</h2><br>
                         <strong>Customer Name:</strong> {{ estimation.customer.name |capitalize}}<br>
                         <strong>Estimation Date:</strong> {{ estimation.date|date("Y-m-d") }}<br>
@@ -102,25 +109,26 @@
                 <tr class="border-right">
                     <td class="pad-left">&nbsp;</td>
                     <td class="right border-top">Deposit</td>
-                    <td class="right border-top">$ {{ detail.deposit|number_format(2, '.', ',') }}</td>
+                    <td class="right border-top">$ {{ estimation.deposit|number_format(2, '.', ',') }}</td>
                 </tr>
                 <tr class="border-right">
                     <td class="pad-left">&nbsp;</td>
                     <td class="right border-top">Extras</td>
-                    <td class="right border-top">$ {{ detail.extras|number_format(2, '.', ',') }}</td>
+                    <td class="right border-top">$ {{ estimation.extra|number_format(2, '.', ',') }}</td>
                 </tr>
                 <tr class="border-right">
                     <td class="pad-left">&nbsp;</td>
                     <td class="right border-top">Total</td>
-                    <td class="right border-top">$ {{ (subTotal + detail.extras)|number_format(2, '.', ',') }}</td>
+                    <td class="right border-top">$ {{ (subTotal + estimation.extra)|number_format(2, '.', ',') }}</td>
                 </tr>
                 <tr class="border-right">
                     <td class="pad-left">&nbsp;</td>
                     <td class="right border-top">Balance Due</td>
-                    <td class="right border-top">$ {{ (subTotal + detail.extras)|number_format(2, '.', ',') }}</td>
+                    <td class="right border-top">$ {{ ((subTotal + estimation.extra) -  estimation.deposit) |number_format(2, '.', ',') }}</td>
                 </tr>
             </tbody>
         </table>
+        <p>{{ ESTIMATE_BOTTOM_COPY }}</p>
         <p>&nbsp;</p>
 
     </div>
