Added support to custom products from backend. Added toggle on form once is submit the form.

--- a/templates/estimation/new.twig
+++ b/templates/estimation/new.twig
@@ -2,6 +2,9 @@
 
 {% block content %}
     <div id="app" class="container">
-        <estimate pdf-route="{{ ROOT_PUBLIC_PLUGIN_URL }}"></estimate>
+        <estimate
+            pdf-route="{{ ROOT_PUBLIC_PLUGIN_URL }}"
+            products="{{ products|json_encode }}"
+        ></estimate>
     </div>
 {% endblock %}
